Attempting to fix iOS background shift.

--- a/src/index.css
+++ b/src/index.css
@@ -71,8 +71,8 @@ body {
 		)
 		center/cover fixed;
 	font-family: var(--default-font-family);
-	min-height: 100vh;
-	width: 100vw;
+	min-height: 100dvh;
+	width: 100dvw;
 	overflow-x: hidden;
 	background-color: #000;
 }
